--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ ENV/
 # --- Environment Variables or Secrets ---
 .env
 .env.*
-! .env.example  env 
+! .env.example 
 
 # --- Distribution / Packaging ---
 build/
