--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+aiomysql==0.3.2
 alembic==1.18.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
@@ -126,6 +127,7 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 Pygments==2.14.0
 Pympler==1.1
+PyMySQL==1.1.2
 pyparsing==3.2.5
 PySocks==1.7.1
 pytest==8.3.5
