--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,12 @@ Thumbs.db
 
 
 # --- Log files ---
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
